--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <h2>Les 1: FTP / Filezilla / Ma Cloud hosting</h3>
         <ul>
             <li><a href="voorbeeld-achievement/index.html">Voorbeeld achievement</a></li>
-            <li>Javascript Achievement</li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Alert/JSalert.html">L1--Alert</a> </li>
 
         </ul>
         <hr>
         <h2>Les 2: HTML5</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Functions/start_1.html">L2--Functions</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
