--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul>
             <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Functions/start_1.html">L2--Functions</a></li>
             <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Turtle/Demo.html">L2--Turtle</a></li>
-            <li>...</li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--CheckerBoard/">L2--Checkerboard</a></li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
