--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--TextToSpeech/index.html">L3--TextToSpeech</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
