--- a/index.html
+++ b/index.html
@@ -42,42 +42,37 @@
         <ul>
             <li><a href="voorbeeld-achievement/index.html">Voorbeeld achievement</a></li>
             <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Alert/JSalert.html">L1--Alert</a> </li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Turtle/Demo.html">L1--Turtle</a></li>
 
         </ul>
         <hr>
         <h2>Les 2: HTML5</h3>
         <ul>
             <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Functions/start_1.html">L2--Functions</a></li>
-            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Turtle/Demo.html">L2--Turtle</a></li>
             <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--CheckerBoard/">L2--Checkerboard</a></li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
             <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--TextToSpeech/index.html">L3--TextToSpeech</a></li>
-            <li>Javascript Achievement</li>
-            <li>...</li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--MakeAScene/index.html">L3--MakeAScene</a></li>
         </ul>
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
         <ul>
             <li><a href="https://32018.hosts1.ma-cloud.nl/javascript1/JS--WebXrDemo/ma-webxr-master/index.html">L4--WebXrDemo</a></li>
-            <li>Javascript Achievement</li>
-            <li>...</li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Healthbar/index.html">L4--Healthbar</a></li>
         </ul>
         <hr>
         <h2>Les 5: Functions / Events</h3>
         <ul>
-            <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
-            <li>...</li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--ScrollOnMe/index.html"></a>L5--ScrollOnMe</li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Quiz/F1M2BO-Quiz-Javascript-main/index.html"></a>L5--Quiz</li>
         </ul>
         <hr>
         <h2>Les 6: Modulo</h3>
         <ul>
-            <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
-            <li>...</li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--DungeonMaster/index.html">L6--DungeonMaster</a></li>
         </ul>
     </div>
 </body>
