ok now i think i might be done

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <hr>
         <h2>Les 5: Functions / Events</h3>
         <ul>
-            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--ScrollOnMe/index.html"></a>L5--ScrollOnMe</li>
-            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Quiz/F1M2BO-Quiz-Javascript-main/index.html"></a>L5--Quiz</li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--ScrollOnMe/index.html">L5--ScrollOnMe</a></li>
+            <li><a href="http://32018.hosts1.ma-cloud.nl/javascript1/JS--Quiz/F1M2BO-Quiz-Javascript-main/index.html">L5--Quiz</a></li>
         </ul>
         <hr>
         <h2>Les 6: Modulo</h3>
